<resources>
    <string name="app_name">长江设计</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="moreData">加载更多数据</string>
    <string name="search_hint">请输入联系人名称</string>
    <string name="but_login">登录</string>
    <string name="emp_department">所属部门 : </string>
    <string name="emp_userPost">所属职务 : </string>
    <string name="emp_iphone">移动号码 : </string>
    <string name="emp_phoneNumber">手机号码 : </string>
    <string name="emp_telephone">办公号码 : </string>
    <string name="emp_shortNumber">手机短号 : </string>
    <string name="emp_nameSpell">所属账号 : </string>
    <string name="emp_email">电子邮箱 : </string>
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="description_dial_button" msgid="7459705245418435351">"拨号"</string>
    <string name="action_menu_dialpad_button">dial pad</string>
    <string name="action_menu_overflow_description" msgid="2303272250613084574">"更多选项"</string>
    <string name="action_menu_call_history_description" msgid="9018442816219748968">"通话记录"</string>
    <string name="dialpad_0_number">0</string>
    <string name="dialpad_1_number">1</string>
    <string name="dialpad_2_number">2</string>
    <string name="dialpad_3_number">3</string>
    <string name="dialpad_4_number">4</string>
    <string name="dialpad_5_number">5</string>
    <string name="dialpad_6_number">6</string>
    <string name="dialpad_7_number">7</string>
    <string name="dialpad_8_number">8</string>
    <string name="dialpad_9_number">9</string>
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">#</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters"></string>
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_star_letters"></string>
    <string name="dialpad_pound_letters"></string>
    <string name="description_image_button_one" msgid="5502718871331943463">"一"</string>
    <string name="description_image_button_two" msgid="4903738528222924522">"二"</string>
    <string name="description_image_button_three" msgid="5570985408463782329">"三"</string>
    <string name="description_image_button_four" msgid="1697520001239289074">"四"</string>
    <string name="description_image_button_five" msgid="3450276493026943454">"五"</string>
    <string name="description_image_button_six" msgid="2070376172268675300">"六"</string>
    <string name="description_image_button_seven" msgid="1757351311199993371">"七"</string>
    <string name="description_image_button_eight" msgid="4734693919020613227">"八"</string>
    <string name="description_image_button_nine" msgid="5568534122590597040">"九"</string>
    <string name="description_image_button_star" msgid="1976280813017254462">"星标"</string>
    <string name="description_image_button_zero" msgid="4211255756866893605">"零"</string>
    <string name="description_image_button_pound" msgid="1716041284529917866">"英镑"</string>
    <string name="description_delete_button" msgid="4015842181592283903">"Backspace 键"</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">请将二维码放入框内</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_history_summary">Store your scans in History</string>
    <string name="preferences_history_title">Add to History</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
    <string name="common_cancel">取消</string>
    <string name="common_confirm">确定</string>
    <string name="tab_video_activity_resolution_title">画质选择</string>
    <string name="tab_video_activity_resolution_HD">高清画质</string>
    <string name="tab_video_activity_resolution_SD">标清画质</string>
    <string name="tab_video_activity_resolution_LD">流畅画质</string>
    <string name="tab_video_activity_flip_title">翻转选择</string>
    <string name="tab_video_activity_flip_horizontal">水平翻转</string>
    <string name="tab_video_activity_flip_vertical">垂直翻转</string>
</resources>