<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/employeeInfo_ft"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/white"
    android:orientation="vertical" >

    <!--  include layout="@layout/department_top" />-->

    <RelativeLayout
        android:id="@+id/info_top"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/name_bg"
        android:gravity="center"
        android:paddingBottom="4dip"
        android:paddingLeft="30dip"
        android:paddingRight="12dip" >

        <TextView
            android:id="@id/emp_id_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingRight="25dip"
            android:text="姓名"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <ImageButton
            android:id="@id/emp_keep_btn"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@drawable/keep_btn_bg" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/empinfo_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:paddingLeft="30dip"
        android:stretchColumns="1" >

        <TableRow android:layout_marginBottom="10dip" >

            <TextView
                android:text="@string/emp_department"
                android:textColor="@android:color/black"
                style="@style/emp_info_text_left" />

            <TextView
                android:id="@id/emp_id_department"
                android:text="tmacsky"
                style="@style/emp_info_text_right" />
        </TableRow>

        <TableRow android:layout_marginBottom="10dip" >

            <TextView
                android:text="@string/emp_userPost"
                style="@style/emp_info_text_left" />

            <TextView
                android:id="@id/emp_id_userPost"
                style="@style/emp_info_text_right" />
        </TableRow>

        <TableRow android:layout_marginBottom="10dip" >

            <TextView
                android:text="@string/emp_iphone"
                style="@style/emp_info_text_left" />

            <TextView
                android:id="@id/emp_id_iphone"
                android:autoLink="phone"
                style="@style/emp_info_text_right" />
        </TableRow>

        <TableRow android:layout_marginBottom="10dip" >

            <TextView
                android:text="@string/emp_phoneNumber"
                style="@style/emp_info_text_left" />

            <TextView
                android:id="@id/emp_id_phoneNumber"
                android:autoLink="phone"
                style="@style/emp_info_text_right" />
        </TableRow>

        <TableRow android:layout_marginBottom="10dip" >

            <TextView
                android:text="@string/emp_telephone"
                style="@style/emp_info_text_left" />

            <TextView
                android:id="@id/emp_id_telephone"
                android:autoLink="phone"
                style="@style/emp_info_text_right" />
        </TableRow>

        <TableRow android:layout_marginBottom="10dip" >

            <TextView
                android:text="@string/emp_shortNumber"
                style="@style/emp_info_text_left" />

            <TextView
                android:id="@id/emp_id_shortNumber"
                style="@style/emp_info_text_right" />
        </TableRow>

        <TableRow android:layout_marginBottom="10dip" >

            <TextView
                android:text="@string/emp_email"
                style="@style/emp_info_text_left" />

            <TextView
                android:id="@id/emp_id_email"
                android:autoLink="email"
                style="@style/emp_info_text_right" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/info_bottom"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableLayout
            android:id="@+id/empinfo_table_bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="50dip"
            android:paddingLeft="30dip" >

            <TableRow android:layout_marginBottom="15dip" >

                <ImageButton
                    android:id="@id/empinfo_toPhone_btn"
                   style="@style/emp_info_btn"
                    android:background="@drawable/to_phone_btn_bg" />

                <ImageButton
                    android:id="@id/empinfo_toSms_btn"
                    style="@style/emp_info_btn"
                    android:background="@drawable/to_sms_btn_bg" />
            </TableRow>

            <TableRow android:layout_marginBottom="15dip" >

                <ImageButton
                    android:id="@id/empinfo_toEmail_btn"
                   	style="@style/emp_info_btn"
                    android:background="@drawable/to_email_btn_bg" />

                <ImageButton
                    android:id="@id/empinfo_addPhone_btn"
                    style="@style/emp_info_btn"
                    android:background="@drawable/add_phone_btn_bg" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</LinearLayout>